<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Min Time</string>
    <string name="min">min</string>
    <string name="sec">s</string>
    <string name="start">Start</string>
    <string name="resume">Proceed</string>
    <string name="template" translatable="false">%1$d %2$s</string>
    <string name="template_two_dashes" translatable="false">%1$s - %2$s - %3$s</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="hint">Tap anywhere to finish</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="error1">Could not save data</string>
    <string name="left">About %1$d %2$s left</string>
    <string name="running">Running for %1$d minutes</string>
    <string name="clear">Clear</string>
    <string name="time_is_up">Time is up</string>
    <string name="cancel">Cancel</string>
    <string name="open_app">Open app</string>

    <string name="info1">Divide your talk into three parts.</string>
    <string name="info2">Green represents the introduction.</string>
    <string name="info3">Yellow should represent the main part.</string>
    <string name="info4">Red represents wrap up and closing.</string>
    <string name="info2_short">Introduction</string>
    <string name="info3_short">Main part</string>
    <string name="info4_short">Closing</string>
    <string name="info5">You can save time distributions and easily pick them later.</string>
    <string name="info6">You can remove a certain time distribution.</string>

    <string name="notification_settings">Notification settings</string>
    <string name="check_notification_settings_off">Notifications are off. Please check notification settings.</string>
    <string name="check_notification_settings_channel_off">The notification channel Time related notifications is off. Please check notification settings.</string>
    <string name="check_notification_settings_channel_silent">The notification channel Time related notifications is silent. Please check notification channel settings.</string>
    <string name="notification_channel_name">Time related notifications</string>
    <string name="notification_channel_description">Elapsed and remaining time</string>
    <string name="notification_channel_settings">notification channel settings</string>

    <string name="alarms_and_reminders">Alarms and reminders</string>
    <string name="exact_alarms_are_off">For precise phase alerts, please allow setting alarms and reminders.</string>

</resources>
