<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/main_ui"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout xmlns:custom="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/info1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/info1" />

                        <LinearLayout
                            android:id="@+id/counters_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/info1"
                            android:orientation="vertical">

                            <com.thomaskuenneth.mintime.Counter
                                android:id="@+id/counter1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/top_corners"
                                android:backgroundTint="?attr/colorSurfaceContainerLow"
                                custom:mintime_color="@color/green" />

                            <TextView
                                android:id="@+id/info2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/info2" />

                            <com.thomaskuenneth.mintime.Counter
                                android:id="@+id/counter2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/colorSurfaceContainerLow"
                                custom:mintime_color="@color/orange" />

                            <TextView
                                android:id="@+id/info3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/info3" />

                            <com.thomaskuenneth.mintime.Counter
                                android:id="@+id/counter3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?attr/colorSurfaceContainerLow"
                                custom:mintime_color="@color/red" />

                            <TextView
                                android:id="@+id/info4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/info4" />

                            <TextView
                                android:id="@+id/total"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/bottom_corners"
                                android:padding="16dp"
                                android:backgroundTint="?attr/colorSurfaceContainerLow"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:textSize="20pt" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/counters_group"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="0dp"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:hyphenationFrequency="full"
                            custom:drawableStartCompat="@drawable/ic_baseline_notifications_off_24"
                            custom:drawableTint="?colorControlNormal" />

                        <TextView
                            android:id="@+id/info_schedule_exact_alarms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/info"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="0dp"
                            android:drawablePadding="8dp"
                            android:gravity="center_vertical"
                            android:hyphenationFrequency="full"
                            custom:drawableStartCompat="@drawable/baseline_alarm_off_24"
                            custom:drawableTint="?colorControlNormal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="64dp"
                            android:layout_below="@id/info_schedule_exact_alarms" />

                    </RelativeLayout>

                </androidx.core.widget.NestedScrollView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/start"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/baseline_start_24"
                    tools:layout_margin="16dp" />

            </FrameLayout>

            <View
                android:id="@+id/hinge"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/info_panel"
                layout="@layout/info_panel" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/timer_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.thomaskuenneth.mintime.BigTime
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <Space
                android:id="@+id/timer_space"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>